erDiagram
    users {
        bigint user_id PK
        string email
        string name
        string password
        boolean active
    }

    products {
        bigint product_id PK
        string name
        int price
        int stock
    }

    top_sales_data {
        bigint id PK
        bigint product_id FK
        int saleCount
        dateTime dateTime
    }

    point {
        bigint id PK
        bigint user_id FK
        int amount
    }

    orders {
        bigint order_id PK
        bigint user_id FK
        bigint issued_coupon_id FK
        datetime order_datetime
        int total_price
        enum order_status
    }

    order_lines {
        bigint order_line_id PK
        bigint order_id FK
        bigint product_id FK
        int quantity
        int total_price
    }
    order_histories {
        bigint order_id PK
        bigint user_id FK
        bigint issued_coupon_id FK
        datetime order_datetime
        int total_price
        enum order_status
    }

    coupons {
        bigint coupon_id PK
        string name
        int stock
        datetime start_date
        datetime end_date
        boolean active
        enum coupon_type "PERCENTAGE_TYPE, AMOUNT_TYPE"
        int discount_value
    }

    issued_coupons {
        bigint issued_coupon_id PK
        bigint coupon_id FK
        bigint user_id FK
        boolean is_active
    }

    users ||--o{ orders: places
    users ||--o{ point: has
    users ||--o{ issued_coupons: receives
    orders ||--|{ order_lines: contains
    order_lines }|--|| products: references
    products ||--o{ top_sales_data: has
    coupons ||--o{ issued_coupons: issues